modules/gdscript/tests/scripts/parser/errors/anonymous_class_empty.gd
class Base:
	func foo():
		pass


func test():
	var obj = Base.new():
		pass
	print(obj)
